--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ body {
 .header-logo {
   float: left;
   margin-right: 500px;
+  font-size: 16px;
 }
 
 .header-navigation {
-  background-color: rgb(83, 6, 146);
+  background-image: url(/img/kosmo.png);
+  background-size: 1400px;
   color: white;
   padding: 10px 0;
 }
@@ -46,5 +48,4 @@ body {
   text-transform: uppercase;
   padding: 0 15px;
   font-size: 16px;
-  background-color: rgb(83, 6, 146);
 }
