--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ body {
 }
 .menu-link {
   text-transform: uppercase;
-  padding: 0 15px;
+  padding: 15px;
   font-size: 16px;
+  transition: 0.4s;
+}
+
+.menu-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
