--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
   --accent: rgb(48, 11, 146);
+  --accent-light: rgb(96, 70, 165);
+  --pure-white: rgb(255, 255, 255);
 }
 
 html {
@@ -15,6 +17,7 @@ html {
 body {
   font-family: Verdana, sans-serif;
   margin: 0;
+  color: var(--accent);
 }
 
 .header {
@@ -22,7 +25,7 @@ body {
 }
 
 .header a {
-  color: #fff;
+  color: var(--pure-white);
   text-decoration: none;
 }
 
@@ -39,6 +42,10 @@ body {
   padding: 0 10px;
 }
 
+.section {
+  padding: 60px 0;
+}
+
 .header-logo {
   text-transform: uppercase;
 }
@@ -49,8 +56,7 @@ body {
   list-style: none;
   display: flex;
 }
-.menu-item {
-}
+
 .menu-link {
   text-transform: uppercase;
   padding: 15px;
@@ -61,10 +67,86 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.intro {
-  padding: 60px 0;
+.intro-left {
+  width: 20%;
 }
+
 .intro-inner {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 45px;
+}
+
+.intro-right {
+  width: 60%;
+}
+
+.intro-img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+.intro-right h1,
+.intro-right h3 {
+  margin: 0 0 15px;
+}
+
+.contacts {
+  margin-bottom: 60px;
+}
+
+.section-title {
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.contacts ul {
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+
+.skills {
+  background-color: var(--accent);
+  color: var(--pure-white);
+}
+
+.skills ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.skills li {
+  padding: 10px 15px;
+  background-color: var(--accent-light);
+  border-radius: 5px;
+}
+
+.example pre {
+  width: 60%;
+  margin: 0 auto;
+  text-align: left;
+  background-color: var(--accent);
+  color: var(--pure-white);
+  border-radius: 8px;
+}
+
+.edu {
+  background-color: var(--accent);
+  color: var(--pure-white);
+}
+
+.footer {
+  text-align: center;
 }
