--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ body {
 .header {
   /*background-color: var(--accent);*/
   background-image: url(/img/blue.jpg);
-  width: 100%;
-  position: fixed;
 }
 .header a {
   color: var(--pure-white);
@@ -189,4 +187,67 @@ body {
 
 .footer {
   text-align: center;
+}
+
+@media (width: 320px) {
+  .container {
+    width: 320px;
+    padding: 0 5px;
+    overflow-x: hidden;
+  }
+  .header-navigation {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+  }
+  .menu-link {
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .intro-inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .intro-left {
+    margin-right: 190px;
+  }
+  .example pre {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (width: 768px) {
+  .container {
+    width: 750px;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
+  .header-navigation {
+    padding: 5px 0;
+    display: flex;
+    font-size: 14px;
+  }
+  .intro-inner {
+    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .intro-left {
+    width: 15%;
+    margin-left: 70px;
+  }
+  .intro-right {
+    width: 65%;
+  }
 }
