--- a/style.css
+++ b/style.css
@@ -251,3 +251,79 @@ body {
     width: 65%;
   }
 }
+
+@media (width: 375px) {
+  .container {
+    width: 375px;
+    padding: 0 5px;
+    overflow-x: hidden;
+  }
+  .header-navigation {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+  }
+  .menu-link {
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .intro-inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .intro-left {
+    margin-right: 190px;
+  }
+  .example pre {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (width: 425px) {
+  .container {
+    width: 425px;
+    padding: 0 5px;
+    overflow-x: hidden;
+  }
+  .header-navigation {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+  }
+  .menu-link {
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .intro-inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .intro-left {
+    margin-right: 190px;
+  }
+  .example pre {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
